# carapace

./: .gitignore  Cargo.toml  README.md  itch.toml
.github/workflows/: ci.yml  demo.yml  release.yml
assets/config/: behavior_rules.toml  biome_rules.toml  crafting.toml  dialogue.toml  encounters.toml  entity_templates.toml  events.toml  faction_economy.toml  factions.toml  gene_splicing.toml  glyphs.toml  items.toml  location_types.toml  loot_tables.toml  lore_fragments.toml  narrative_events.toml  npc_actions.toml  npc_personalities.toml  quests.toml  region_biomes.toml  spawn_rules.toml  tags.toml
assets/config/entities/: cryo_vault_overseer.toml  guard.toml  merchant.toml  the_anomaly.toml  vampire_lord.toml  wandering_merchant.toml
assets/config/weather/: weather_ashfall.toml  weather_clear.toml  weather_cloudy.toml  weather_fog.toml  weather_rain.toml  (+3 more)
assets/sprites/: atlas.toml  creatures_carapace.toml  design-system.md  generate_mockups.py  tiles_terrain.toml  ui_icons.toml
crates/core/: Cargo.toml
crates/llm/: Cargo.toml
crates/llm/assets/config/: llm.toml
crates/llm/src/: client.rs  config.rs  context.rs  dialogue.rs  error.rs  lib.rs  prompt.rs  provider.rs
crates/llm/tests/: integration.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  glyphs.rs  hud.rs  lib.rs  menu.rs  message_log.rs  overlays.rs  spritesheet.rs  style.rs  world.rs
crates/render/src/panels/: crafting.rs  dialogue.rs  examine.rs  inventory.rs  journal.rs  mod.rs  quest_board.rs
crates/tags/: Cargo.toml
crates/world/: Cargo.toml
crates/world/src/: behavior.rs  biome.rs  debug.rs  dungeon.rs  entity_gen.rs  export.rs  faction.rs  generator.rs  interior.rs  latitude.rs  lib.rs  loader.rs  loot.rs  map.rs  noise_gen.rs  pathfinding.rs  seed.rs  spatial.rs  spawner.rs  tile.rs  wfc.rs
crates/world/src/cascade/: economy.rs  equipment.rs  inventory.rs  inventory_populate.rs  locations.rs  mod.rs  trade.rs
docs/: TODO.md  market-research-and-landing-page-proposal.md
docs/initial-concept/: carapace_game_concept.md
docs/superpowers/: art-bible.md
site/: index.html  main.js  style.css
src/: consume.rs  e2e_tests.rs  equipment.rs  event_format.rs  location_entry.rs  main.rs  plugin.rs  reputation_sync.rs  status.rs  throw.rs  weather_pipeline.rs  world_gen.rs
src/game/: mod.rs
src/interact/: consume.rs  craft.rs  loot.rs  mod.rs  overview.rs  quest_board.rs  talk.rs  throw.rs  trade.rs
src/render/: mod.rs
src/ui/: create_world.rs  input.rs  main_menu.rs  mod.rs  new_character.rs  world_gen_progress.rs
tests/: integration.rs  performance.rs
(+80 files in other folders)
