[workspace]
members = [
    "crates/core",
    "crates/world",
    "crates/render",
    "crates/tags",
    "crates/llm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
bevy_ecs = "0.16"
bevy_state = "0.16"
bevy = { version = "0.16", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "x11",
] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
thiserror = "2"
rand = "0.9"
noise = "0.9"
fixedbitset = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[package]
name = "carapace"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "carapace"
path = "src/main.rs"

[dependencies]
game-core = { path = "crates/core" }
game-render = { path = "crates/render" }
game-world = { path = "crates/world" }
game-tags = { path = "crates/tags" }
game-llm = { path = "crates/llm" }
bevy_ecs.workspace = true
bevy.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
rand.workspace = true
toml.workspace = true
