[package]
name = "game-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_ecs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
game-core = { path = "../core" }
game-tags = { path = "../tags" }
