[package]
name = "game-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
game-core = { path = "../core" }
game-world = { path = "../world" }
game-tags = { path = "../tags" }
bevy_ecs.workspace = true
bevy.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
toml.workspace = true
