[package]
name = "game-world"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_ecs.workspace = true
noise.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
game-core = { path = "../core" }
game-tags = { path = "../tags" }
rand.workspace = true
